# Project_PAO

./: Preoteasa_Rares_Marin_proiect_PAO.pptx  README.md
AES-ON-GPU-master/: cipher.txt  cpu  gpu  output.txt
Preoteasa_Rares_Marin_project/: CMakeLists.txt  main_naive.cpp  valgrind_naive_nospeedup.txt
